--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
   box-shadow: var(--shadow-light); }
 
 header {
-  background-image: url(/img/banner.png);
+  background-image: url(../img/banner.png);
   background-size: cover;
   background-position: center;
   height: 70vh; }
